--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.554.1</version> <!-- folders plugin -->
+    <version>2.19</version>
   </parent>
 
   <artifactId>short-workspace-path</artifactId>
@@ -52,6 +52,10 @@
   </pluginRepositories>
 
   <properties>
+    <jenkins.version>1.554.1</jenkins.version> <!-- folders plugin -->
+    <jenkins-test-harness.version>2.18</jenkins-test-harness.version>
+    <java.level>7</java.level>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <surefire.useFile>false</surefire.useFile>
   </properties>
