--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
       <version>1.2.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>junit</artifactId>
+			<version>1.5</version>
+		</dependency>
+    <dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>matrix-project</artifactId>
+			<version>1.4</version>
+		</dependency>
   </dependencies>
 
   <repositories>
@@ -52,8 +62,8 @@
   </pluginRepositories>
 
   <properties>
-    <jenkins.version>1.554.1</jenkins.version> <!-- folders plugin -->
-    <jenkins-test-harness.version>2.11</jenkins-test-harness.version>
+    <jenkins.version>2.46.3</jenkins.version> <!-- folders plugin -->
+    <jenkins-test-harness.version>2.22</jenkins-test-harness.version>
     <java.level>7</java.level>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
